added all sites and fixed some layout issues

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="./logo192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta property="og:image" content="./logo192.png" />
-    <meta name="theme-color" content="#602238" />
+    <meta name="theme-color" content="#091f2a" />
     <meta
       name="description"
       content="My name is Maya and I'm a web developper in the making. Comme get to know me and see all my creations in one place."
