added scroll to top

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#091f2a" />
     <meta
       name="description"
-      content="My name is Maya and I'm a web developper in the making. Comme get to know me and see all my creations in one place."
+      content="My name is Maya and I'm a web developper in the making. Get to know me and see all my creations in one place."
     />
     <link rel="apple-touch-icon" href="./logo192.png" />
     <!--
